<resources>
    <string name="app_name">Is Bus Coming?</string>

    <string name="bus_stop_list_title">List of Bus Stops</string>
    <string name="about_title">About the App</string>
    <string name="action_about">About</string>
    <string name="about_appDescription">Save time by adding your frequent bus stops to the list.
        With one click, find out where or how soon that bus is coming.</string>
    <string name="about_appDisclaimer">The app uses SMS features.
        Carrier charges may apply!</string>
    <string name="about_appLicense">The app is open source. Sourcecode is available on GitHub.
        Sourcecode is published under MIT License.</string>
    <string name="about_appDevelopers">Developed by fellow NYC MTA Bus riders.</string>
    <string name="about_appMoreInfo">For more information about MTA Buses visit mta.info.
        Bus times are also available at bustime.mta.info</string>
    <string name="busStopNumber">Number</string>
    <string name="busStopName">Stop Name</string>
    <string name="title_activity_add_bus_stop">AddBusStopActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="busStopInfo">Bus Stop Info</string>
    <string name="add">Add</string>
    <string name="enterBusInfo">Please, enter bus info.</string>
    <string name="statusReceived">Status Update Received</string>
    <string name="status_title">Bus Stop Status</string>
    <string name="lastUpdated">Last updated:</string>
    <string name="deleteMessage">Do you want to delete</string>
    <string name="questionMark">\?</string>
    <string name="deleteTitle">Delete</string>
    <string name="statusLoading">Retrieving status..</string>
</resources>
