<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:text="@string/about_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:editable="false"
        android:textColor="#ff1c4872"
        android:textSize="20dp"
        android:textStyle="bold"
        android:id="@+id/busStopListTitle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_appDescription"
        android:id="@+id/appDescription"
        android:paddingTop="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_appDisclaimer"
        android:id="@+id/appDisclaimer"
        android:textColor="#ff610003"
        android:paddingTop="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_appLicense"
        android:id="@+id/appLicense"
        android:paddingTop="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_appDevelopers"
        android:id="@+id/appDevelopers"
        android:paddingTop="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_appMoreInfo"
        android:id="@+id/appMoreInfo"
        android:paddingTop="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

</LinearLayout>